6.1.0-SNAPSHOT b3 added editor config / checkstyle / inspection profiles and commented out unused classes